@@ -178,6 +178,7 @@ public class Converter {
    * given value
    */
   public static String toSQLString(String input) {
+    input = input.replaceAll("'", "''");
     return "'" + input + "'";
   }
 
@@ -425,6 +426,12 @@ public class Converter {
 }
 
 // $Log$
+// Revision 1.5.52.1  2008/09/03 18:23:07  sc
+// lib_java_core-tr9231-1
+//
+// Revision 1.5  2004/12/16 21:18:58  mbw
+// merged assembly branch onto the trunk
+//
 // Revision 1.4.4.1  2004/12/02 19:27:11  mbw
 // changed use of floats to doubles
 //
